--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -9,7 +9,7 @@ type       : 'Library'
 <!-- TEST JS HERE !-->
 <script type="text/javascript">
 $(document).ready(function() {
-
+    $('.ui.dropdown').dropdown();
 });
 </script>
 
@@ -17,28 +17,231 @@ $(document).ready(function() {
 
 </style>
 
-<div class="ui container" style="padding-top:300px;">
-    <div class="ui two top attached buttons">
-        <div class="ui button">One</div>
-        <div class="ui button">Two</div>
-    </div>
-    <div class="ui attached segment">
 
-    </div>
-    <div class="ui two bottom attached buttons">
-        <div class="ui button">One</div>
-        <div class="ui button">Two</div>
-    </div>
-
-    <div class="ui divider"></div>
-
-    <div class="ui three item top attached menu">
-        <a class="item">1</a>
-        <a class="item">2</a>
-        <a class="item">3</a>
-    </div>
-    <div class="ui two bottom attached buttons">
-        <div class="ui button">One</div>
-        <div class="ui button">Two</div>
-    </div>
+<div class="ui labeled icon menu">
+  <div class="ui container">
+  <a class="item">
+    <i class="star icon"></i>
+    Star
+  </a>
+  <a class="item">
+    <i class="heart icon"></i>
+    Heart
+  </a>
+  <a class="item">
+    <i class="map icon"></i>
+    Map
+  </a>
+  </div>
 </div>
+<div class="ui menu">
+  <div class="ui container">
+  <a class="item">
+    A
+  </a>
+  <a class="item">
+    B
+  </a>
+  <div class="item">
+  <div class="ui transparent icon input">
+      <input type="text" placeholder="Search...">
+      <i class="search icon"></i>
+    </div>
+  </div>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="ui tabular menu">
+  <div class="ui container">
+  <a class="item">
+    Tab
+  </a>
+  <a class="item">
+    Tab
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="ui text demo menu">
+  <div class="ui container">
+  <a class="item">
+    A
+  </a>
+  <a class="item">
+    B
+  </a>
+  <a class="item">
+    C
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="ui secondary demo menu">
+  <div class="ui container">
+  <a class="item">
+    A
+  </a>
+  <a class="item">
+    B
+  </a>
+  <a class="item">
+    C
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+<div class="ui secondary pointing three item demo menu">
+  <div class="ui container">
+  <a class="item">
+    A
+  </a>
+  <a class="item">
+    B
+  </a>
+  <a class="item">
+    C
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+
