--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -17,8 +17,7 @@ $(document).ready(function() {
 
 </style>
 
-
-<div class="ui labeled icon menu">
+<div class="ui labeled icon inverted menu">
   <div class="ui container">
   <a class="item">
     <i class="star icon"></i>
@@ -32,8 +31,168 @@ $(document).ready(function() {
     <i class="map icon"></i>
     Map
   </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item"><i class="home icon"></i> Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
   </div>
 </div>
+
+<div class="ui labeled vertical icon inverted menu">
+  <a class="item">
+    <i class="star icon"></i>
+    Star
+  </a>
+  <a class="item">
+    <i class="heart icon"></i>
+    Heart
+  </a>
+  <a class="item">
+    <i class="map icon"></i>
+    Map
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item"><i class="home icon"></i> Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+</div>
+
+
+<div class="ui icon inverted menu">
+  <div class="ui container">
+  <a class="item">
+    <i class="star icon"></i>
+  </a>
+  <a class="item">
+    <i class="heart icon"></i>
+  </a>
+  <a class="item">
+    <i class="map icon"></i>
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item"><i class="home icon"></i> Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div class="ui vertical icon inverted menu">
+  <a class="item">
+    <i class="star icon"></i>
+  </a>
+  <a class="item">
+    <i class="heart icon"></i>
+  </a>
+  <a class="item">
+    <i class="map icon"></i>
+  </a>
+  <div class="ui dropdown item">
+    <span class="text">Shopping</span>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item"><i class="home icon"></i> Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+</div>
+
+
 <div class="ui menu">
   <div class="ui container">
   <a class="item">
