--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -7,400 +7,33 @@ title      : 'Test Page'
 type       : 'Library'
 ---
 <!-- TEST JS HERE !-->
+<style>
+  .container {
+    padding: 2em;
+  }
+</style>
 <script type="text/javascript">
 $(document).ready(function() {
-    $('.ui.dropdown').dropdown();
+    $('.container div').popup({
+      on: 'hover',
+      position: 'bottom right',
+      preserve: true
+    });
 });
 </script>
 
 <style>
 
 </style>
-
-<div class="ui labeled icon inverted menu">
-  <div class="ui container">
-  <a class="item">
-    <i class="star icon"></i>
-    Star
-  </a>
-  <a class="item">
-    <i class="heart icon"></i>
-    Heart
-  </a>
-  <a class="item">
-    <i class="map icon"></i>
-    Map
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item"><i class="home icon"></i> Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
+<div class="ui container">
+  <div class="ui divider"></div>
+  <div class="ui divider"></div>
+  <div class="ui divider"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
+  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
 </div>
-
-<div class="ui labeled vertical icon inverted menu">
-  <a class="item">
-    <i class="star icon"></i>
-    Star
-  </a>
-  <a class="item">
-    <i class="heart icon"></i>
-    Heart
-  </a>
-  <a class="item">
-    <i class="map icon"></i>
-    Map
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item"><i class="home icon"></i> Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-</div>
-
-
-<div class="ui icon inverted menu">
-  <div class="ui container">
-  <a class="item">
-    <i class="star icon"></i>
-  </a>
-  <a class="item">
-    <i class="heart icon"></i>
-  </a>
-  <a class="item">
-    <i class="map icon"></i>
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item"><i class="home icon"></i> Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-
-<div class="ui vertical icon inverted menu">
-  <a class="item">
-    <i class="star icon"></i>
-  </a>
-  <a class="item">
-    <i class="heart icon"></i>
-  </a>
-  <a class="item">
-    <i class="map icon"></i>
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item"><i class="home icon"></i> Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-</div>
-
-
-<div class="ui menu">
-  <div class="ui container">
-  <a class="item">
-    A
-  </a>
-  <a class="item">
-    B
-  </a>
-  <div class="item">
-  <div class="ui transparent icon input">
-      <input type="text" placeholder="Search...">
-      <i class="search icon"></i>
-    </div>
-  </div>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item">Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-<div class="ui tabular menu">
-  <div class="ui container">
-  <a class="item">
-    Tab
-  </a>
-  <a class="item">
-    Tab
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item">Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-<div class="ui text demo menu">
-  <div class="ui container">
-  <a class="item">
-    A
-  </a>
-  <a class="item">
-    B
-  </a>
-  <a class="item">
-    C
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item">Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-<div class="ui secondary demo menu">
-  <div class="ui container">
-  <a class="item">
-    A
-  </a>
-  <a class="item">
-    B
-  </a>
-  <a class="item">
-    C
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item">Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-<div class="ui secondary pointing three item demo menu">
-  <div class="ui container">
-  <a class="item">
-    A
-  </a>
-  <a class="item">
-    B
-  </a>
-  <a class="item">
-    C
-  </a>
-  <div class="ui dropdown item">
-    <span class="text">Shopping</span>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      <div class="header">Categories</div>
-      <div class="item">
-        <i class="dropdown icon"></i>
-        <span class="text">Clothing</span>
-        <div class="menu">
-          <div class="header">Mens</div>
-          <div class="item">Shirts</div>
-          <div class="item">Pants</div>
-          <div class="item">Jeans</div>
-          <div class="item">Shoes</div>
-          <div class="divider"></div>
-          <div class="header">Womens</div>
-          <div class="item">Dresses</div>
-          <div class="item">Shoes</div>
-          <div class="item">Bags</div>
-        </div>
-      </div>
-      <div class="item">Home Goods</div>
-      <div class="item">Bedroom</div>
-      <div class="divider"></div>
-      <div class="header">Order</div>
-      <div class="item">Status</div>
-      <div class="item">Cancellations</div>
-    </div>
-  </div>
-  </div>
-</div>
-
