--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -15,9 +15,7 @@ type       : 'Library'
 <script type="text/javascript">
 $(document).ready(function() {
     $('.container div').popup({
-      on: 'hover',
-      position: 'bottom right',
-      preserve: true
+      on: 'hover'
     });
 });
 </script>
@@ -25,7 +23,7 @@ $(document).ready(function() {
 <style>
 
 </style>
-<div class="ui container">
+<div class="ui container" style="position: relative; padding:50px 20px;">
   <div class="ui divider"></div>
   <div class="ui divider"></div>
   <div class="ui divider"></div>
