--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -15,7 +15,8 @@ type       : 'Library'
 <script type="text/javascript">
 $(document).ready(function() {
     $('.container div').popup({
-      on: 'hover'
+      on: 'hover',
+      preserve: true
     });
 });
 </script>
