--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -24,15 +24,8 @@ $(document).ready(function() {
 <style>
 
 </style>
-<div class="ui container" style="position: relative; padding:50px 20px;">
-  <div class="ui divider"></div>
-  <div class="ui divider"></div>
-  <div class="ui divider"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-  <div style="width: 25px;height:25px;background-color: #DDD; display: inline-block;margin-right:5px" data-content="Popup content"></div>
-</div>
+<div class="fixed ui attached yellow inverted borderless menu">
+        <div class="ui container">
+            <a class="ui item">left item</a>
+        </div>
+    </div>
