--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -14,18 +14,50 @@ type       : 'Library'
 </style>
 <script type="text/javascript">
 $(document).ready(function() {
-    $('.container div').popup({
-      on: 'hover',
-      preserve: true
-    });
+  $('.ui.dropdown').dropdown({
+    allowAdditions: true
+  });
+
+  $('form')
+    .on('submit', function(event){
+      event.preventDefault();
+    })
+  ;
+
+  $('.dropdown')
+    .dropdown('set selected',  ['css', 'meteor', 'custom skill'])
+  ;
+
 });
 </script>
 
 <style>
 
 </style>
-<div class="fixed ui attached yellow inverted borderless menu">
-        <div class="ui container">
-            <a class="ui item">left item</a>
-        </div>
+<form class="ui container">
+    <div class="ui fluid multiple search selection dropdown">
+      <input name="tags" type="hidden">
+      <i class="dropdown icon"></i>
+      <div class="default text">Skills</div>
+      <div class="menu">
+        <div class="item" data-value="angular">Angular</div>
+        <div class="item" data-value="css">CSS</div>
+        <div class="item" data-value="design">Graphic Design</div>
+        <div class="item" data-value="ember">Ember</div>
+        <div class="item" data-value="html">HTML</div>
+        <div class="item" data-value="ia">Information Architecture</div>
+        <div class="item" data-value="javascript">Javascript</div>
+        <div class="item" data-value="mech">Mechanical Engineering</div>
+        <div class="item" data-value="meteor">Meteor</div>
+        <div class="item" data-value="node">NodeJS</div>
+        <div class="item" data-value="plumbing">Plumbing</div>
+        <div class="item" data-value="python">Python</div>
+        <div class="item" data-value="rails">Rails</div>
+        <div class="item" data-value="react">React</div>
+        <div class="item" data-value="repair">Kitchen Repair</div>
+        <div class="item" data-value="ruby">Ruby</div>
+        <div class="item" data-value="ui">UI Design</div>
+        <div class="item" data-value="ux">User Experience</div>
+      </div>
     </div>
+</form>
