--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -9,31 +9,41 @@ type       : 'Library'
 
 <div class="ui container">
 
-<div class="ui form">
-  <div class="field">
-    <label>Favorite Animal</label>
-    <div class="ui search selection dropdown">
-      <input type="hidden">
+<div class="ui button dropdown">
+  <span class="text">Choose Category</span>
+  <i class="dropdown icon"></i>
+  <div class="menu">
+    <div class="item">
+      <span class="text">Category 1</span>
+    </div>
+    <div class="item">
       <i class="dropdown icon"></i>
-      <input type="text" class="search" tabindex="0">
-      <div class="default text">Select one...</div>
-      <div class="menu" tabindex="-1"></div>
+      <span class="text">Category 2</span>
+      <div class="menu">
+        <div class="item">Item 2A</div>
+        <div class="item">Item 2B</div>
+        <div class="item">Item 2C</div>
+      </div>
+    </div>
+    <div class="item">
+      <i class="dropdown icon"></i>
+      <span class="text">Category 3</span>
+      <div class="menu">
+        <div class="item">Item 3A</div>
+        <div class="item">Item 3B</div>
+        <div class="item">Item 3C</div>
+      </div>
     </div>
   </div>
 </div>
 
 </div>
-
 <script>
   $(document).ready(function() {
-
-    $('.ui.dropdown').dropdown({
-      apiSettings: {
-        url: '//api.semantic-ui.com/tags/xxx',
-        cache: false
-      }
-    });
-
+$('.ui.dropdown')
+  .dropdown({
+    allowCategorySelection: true
+  });
   });
 </script>
 
@@ -46,3 +56,4 @@ type       : 'Library'
 
 
 </style>
+
