Fix flag docs, fix scroll to behavior

--- a/server/documents/hotfix.html
+++ b/server/documents/hotfix.html
@@ -7,35 +7,29 @@ title      : 'Test Page'
 type       : 'Library'
 ---
 
-<div class="ui container">
-
-<div class="ui button dropdown">
-  <span class="text">Choose Category</span>
-  <i class="dropdown icon"></i>
-  <div class="menu">
+<div class="ui menu">
+  <div class="right menu">
     <div class="item">
-      <span class="text">Category 1</span>
-    </div>
-    <div class="item">
-      <i class="dropdown icon"></i>
-      <span class="text">Category 2</span>
-      <div class="menu">
-        <div class="item">Item 2A</div>
-        <div class="item">Item 2B</div>
-        <div class="item">Item 2C</div>
-      </div>
-    </div>
-    <div class="item">
-      <i class="dropdown icon"></i>
-      <span class="text">Category 3</span>
-      <div class="menu">
-        <div class="item">Item 3A</div>
-        <div class="item">Item 3B</div>
-        <div class="item">Item 3C</div>
+      <div class="ui floating icon labeled button dropdown">
+        <i class="filter icon"></i>
+        <span class="text">Dropdown</span>
+        <div class="menu">
+          <div class="header">
+            <i class="filter icon"></i> Dropdown
+          </div>
+          <div class="item">
+            Loooooooooooooong item 1
+          </div>
+          <div class="item">
+            Item 2
+          </div>
+          <div class="item">
+            Item 3
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 </div>
 <script>
